# ytdl

./: Cargo.toml  README.md  build.rs
.github/workflows/: rust.yml
assets/css/: main.css
src/: classes.rs  constants.rs  main.rs  types.rs
src/components/: app.rs  button.rs  content_type_selector.rs  control_error.rs  downloader.rs  error.rs  loading.rs  mod.rs  output_directory_selector.rs  text_input.rs
src/hooks/: id.rs  mod.rs
src/services/: config.rs  download.rs  fetch_deps.rs  fetch_youtube_dl.rs  mod.rs  parse_url.rs
