[package]
name = "ytdl"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
const_format = "0.2"
dioxus = { version = "0.5", features = ["desktop"] }
home = "0.5"
image = "0.25"
rand = "0.8"
reqwest = "0.12"
tempfile = "3.13"
tokio = { version = "1.41", features = ["full"] }

[target.'cfg(windows)'.build-dependencies]
winres = "0.1"
